Database/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: na-groupe12
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1 # Pour une base de donnée, ne pas mettre plus d'un réplica.
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:17.2
          ports:
            - containerPort: 5432
