Database/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: na-groupe12
  name: database-g12-service
spec:
  selector:
    app: database-g12
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
